move nginx.conf and readme out of publicly-accessible root

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,7 @@ server {
     # Allow file uploads
     client_max_body_size 50M;
     
-    root /home/feross/www/instant.io;
+    root /home/feross/www/instant.io/static;
     index index.html;
     
     # Try to serve static files
